Fri Aug 24 23:31:39 2001  George Lebl <jirka@5z.com>

	Note: we now require most up to date gnome-vfs from CVS

	* gnome-file-entry.[ch]:  Bring back the file entry, use macros in it
	  make it use gnome-vfs uri functions (only local files for now),
	  also make it a vbox with an hbox packed inside it so that preview
	  can be added by gnome-pixmap-entry and it can be derived from
	  gnome-file-entry. I think this should be propagated to
	  gnome-entry somehow maybe.  Move more stuff into the private
	  structure as well.

	* gnome-entry.c: fix warning

2001-08-24  Darin Adler  <darin@bentspoon.com>

	* gnome-entry.h: Fixed GnomeEntry header to not include the
	nonexistent gnome-defs.h header.

	* gnome-color-picker.c:  Removed include of <gtk/gtkcompat.h>
	now that the latest gtk doesn't use that header any more. But
	this does mean we now require a newer gtk.

2001-08-24  Anders Carlsson  <andersca@codefactory.se>

	* gnome-entry.c: (gnome_entry_get_type), (gnome_entry_class_init),
	(gnome_entry_get_property), (gnome_entry_set_property),
	(entry_changed), (entry_activated), (gnome_entry_init),
	(gnome_entry_construct), (gnome_entry_new), (free_item),
	(free_items), (gnome_entry_destroy), (gnome_entry_finalize),
	(gnome_entry_gtk_entry), (gnome_entry_set_history_id),
	(gnome_entry_get_history_id), (gnome_entry_set_max_saved),
	(gnome_entry_get_max_saved), (build_prefix),
	(gnome_entry_add_history), (gnome_entry_prepend_history),
	(gnome_entry_append_history), (set_combo_items),
	(gnome_entry_load_history), (gnome_entry_clear_history),
	(check_for_duplicates), (gnome_entry_save_history):
	* gnome-entry.h:

	Bring back the old GnomeEntry widget.
	
Fri Aug 24 07:57:50 2001  George Lebl <jirka@5z.com>

	* gnome-color-picker.c, gnome-font-picker.c: use gnome-macros.h

Fri Aug 24 07:16:18 2001  George Lebl <jirka@5z.com>

	* gnome-font-picker.[ch]: move all fields to the private struct,
	  add an accessor for the 'inside', but only if it's a user set