@@ -1,3 +1,9 @@
+2001-08-24  Darin Adler  <darin@bentspoon.com>
+
+	* gnome-file-entry.h:
+	* gnome-file-entry.c:
+	Fix headers to make it compile.
+
 Fri Aug 24 23:31:39 2001  George Lebl <jirka@5z.com>
 
 	Note: we now require most up to date gnome-vfs from CVS
